Trying to add legend

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 Multithreading_overrun@1kHz-Plotter faster than serial reader @115200-.png
 Multithreading_synched - Plotter(GUI) thread waits serial thread @115200bps on event driven approach .png
 main_synched_but_interleaved.py
+__pycache__/
